--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,9 +1,51 @@
 version: "2"
 sql:
   - engine: "sqlite"
-    schema: "db/migrations"
+    schema: "internal/store/migrations"
     queries: "db/query"
     gen:
       go:
         package: "db"
         out: "internal/db"
+        overrides:
+          - column: "folders.deleted_at"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullTime"
+          - column: "folders.last_seen_at"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullTime"
+          - column: "folders.last_scan_at"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullTime"
+          - column: "folders.last_scan_status"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullString"
+          - column: "folders.last_scan_error"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullString"
+          - column: "folders.created_at"
+            go_type: "time.Time"
+          - column: "folders.updated_at"
+            go_type: "time.Time"
+
+          - column: "tracks.deleted_at"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullTime"
+          - column: "tracks.last_seen_at"
+            go_type: "time.Time"
+          - column: "tracks.created_at"
+            go_type: "time.Time"
+          - column: "tracks.updated_at"
+            go_type: "time.Time"
