--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -38,11 +38,51 @@ sql:
           - column: "folders.updated_at"
             go_type: "time.Time"
 
+          - column: "artists.deleted_at"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullTime"
+          - column: "artists.created_at"
+            go_type: "time.Time"
+          - column: "artists.updated_at"
+            go_type: "time.Time"
+
+          - column: "albums.deleted_at"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullTime"
+          - column: "albums.created_at"
+            go_type: "time.Time"
+          - column: "albums.updated_at"
+            go_type: "time.Time"
+
           - column: "tracks.deleted_at"
             go_type:
               import: "bottomley.ian/musicserver/internal/dbtypes"
               package: "dbtypes"
               type: "NullTime"
+          - column: "tracks.artist_id"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullInt64"
+          - column: "tracks.album_id"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullInt64"
+          - column: "tracks.genre"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullString"
+          - column: "tracks.year"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullInt64"
           - column: "tracks.last_seen_at"
             go_type: "time.Time"
           - column: "tracks.created_at"
