--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -124,3 +124,31 @@ sql:
             go_type: "time.Time"
           - column: "playlist_tracks.updated_at"
             go_type: "time.Time"
+
+          - column: "tasks.body"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullString"
+          - column: "tasks.tags"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullString"
+          - column: "tasks.deleted_at"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullTime"
+          - column: "tasks.created_at"
+            go_type: "time.Time"
+          - column: "tasks.updated_at"
+            go_type: "time.Time"
+
+          - column: "task_transitions.reason"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullString"
+          - column: "task_transitions.changed_at"
+            go_type: "time.Time"
