--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -93,6 +93,11 @@ sql:
               import: "bottomley.ian/musicserver/internal/dbtypes"
               package: "dbtypes"
               type: "NullInt64"
+          - column: "tracks.duration_seconds"
+            go_type:
+              import: "bottomley.ian/musicserver/internal/dbtypes"
+              package: "dbtypes"
+              type: "NullInt64"
           - column: "tracks.image_path"
             go_type:
               import: "bottomley.ian/musicserver/internal/dbtypes"
