Parse Logseq tasks from journals

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -135,16 +135,16 @@ sql:
               import: "bottomley.ian/musicserver/internal/dbtypes"
               package: "dbtypes"
               type: "NullString"
-          - column: "tasks.tags"
+          - column: "tasks.scheduled_at"
             go_type:
               import: "bottomley.ian/musicserver/internal/dbtypes"
               package: "dbtypes"
               type: "NullString"
-          - column: "tasks.deleted_at"
+          - column: "tasks.deadline_at"
             go_type:
               import: "bottomley.ian/musicserver/internal/dbtypes"
               package: "dbtypes"
-              type: "NullTime"
+              type: "NullString"
           - column: "tasks.created_at"
             go_type: "time.Time"
           - column: "tasks.updated_at"
